perlin noise particle flow field

--- a/flow-field.html
+++ b/flow-field.html
@@ -15,18 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <title>Rudolfs Neija</title>
+    <title>Flow Field</title>
 </head>
 
 <body>
-    <header>
-        <h1>Rudolfs Neija</h1>
-        <nav>
-            <a href="flow-field.html">flow field</a>
-        </nav>
-    </header>
-
     <main>
+        <div id="render-container"></div>
     </main>
 </body>
 
